Fixes wrapping

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -416,16 +416,18 @@ p.button__badge {
 		font-size: 2.5em;
 		font-weight: 600;
 		margin: 0;
+		flex: 1 1 100%;
 	}
 
 	& h2 {
 		font-size: 1.5em;
 		margin: 0.25em 0 0.75em 0;
+		flex: 1 1 100%;
 	}
 }
 
 .acquisition-banner__logo {
-	flex: 1 1 50%;
+	flex: 1 1 auto;
 	display: flex;
 	max-height: 250px;
 	min-width: 225px;
